# haskellbook-workthrough

./: README.md
HaskellBook.hsproj/: .uuid  Ch4.hs  Ch5.hs  Ch6.hs  Ch7.hs  Ch8.hs  Ch9.hs  Cipher.hs  GreetIfCool.hs  HaskellBook.cabal  HaskellBook.hs  HaskellBook2.hs  Print1.hs  Print2.hs  Print3.hs  Print3Broken.hs  WordNumber.hs  _Ch4.hsplay  _Ch5.hsplay  _Ch6.hsplay  _Ch7.hsplay  _Ch8.hsplay  _Ch9.hsplay  _Cipher.hsplay  _HaskellBook.hsplay  _Print3.hsplay  _Print3Broken.hsplay  _WordNumber.hsplay
haskell-book/ch2/: FunctionWithWhere.hs  ch2_exercises.hs  test.hs
haskell-book/ch3/: ch3_exercises.hs  globallocal.hs  print1.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs
haskell-book/ch4/: moods.hs
